[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/bullet.png" type="Texture" id=1]
[ext_resource path="res://CollisionBoxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/PlayerBullet.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 0.5 )

[node name="PlayerBullet" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -1.5, -0.5, 3, 1 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 21

[node name="Collider" parent="Hitbox" index="0"]
shape = SubResource( 1 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="queue_free"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hitbox"]
